[package]
name = "feu-cli"
edition = "2024"
license.workspace = true
version.workspace = true

[dependencies]
colored = "2"
data-encoding = { version = "2", features = ["alloc"] }
feu-noyau = { path = "../feu-noyau" }
feu-application = { path = "../feu-application" }
rpassword = "7"
rustyline = "17"
