[package]
name = "feu-noyau"
edition = "2024"
license.workspace = true
version.workspace = true

[dependencies]
aead = { version = "0.5", features = ["stream"] }
aes-gcm = { version = "0.10", features = ["std", "zeroize"] }
argon2 = { version = "0.5", features = ["std"] }
bip39 = { version = "2", features = ["rand", "french", "zeroize"] }
data-encoding = { version = "2", features = ["alloc"] }
hkdf = "0.12"
ml-dsa = { version = "0.1", features = ["zeroize", "getrandom"] }
ml-kem = { version = "0.3", features = ["zeroize", "getrandom"] }
rand = "0.8"
secrecy = "0.10"
sha3 = "0.10"
tar = "0.4"
thiserror = "2"
zeroize = "1"

[lints]
workspace = true
